# serial-communicator

./: AUTHORS  NEWS  README.md  configure.ac
.github/: CONTRIBUTING.md
build-aux/m4/: flag.m4  host.m4
include/: endian_wrapper.h  initrd.h  kernel.h  serial.h  type.h
src/: Makefile.am  initrd.c  kernel.c  main.c  serial.c
src/platform/rpi/: initrd.c  kernel.c
